--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.3.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.17.0
-  isar: ^3.0.5
-  isar_flutter_libs: ^3.0.5
   logger: ^1.3.0
   path: ^1.8.2
-  path_provider: ^2.0.13
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -30,7 +29,7 @@ dev_dependencies:
   flutter_native_splash: ^2.2.16
   flutter_test:
     sdk: flutter
-  isar_generator: ^3.0.5
+  hive_generator: ^2.0.0
 
 flutter_icons:
   image_path: "assets/icons/app-icon-1024x1024.png"
