--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,26 +7,27 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.4 <3.0.0"
+  sdk: ">=3.0.3 <4.0.0"
 
 dependencies:
-  dijkstra: ^0.0.3
+  connectivity_plus: ^4.0.1
+  dijkstra: ^0.0.4
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^2.3.2
+  flutter_riverpod: ^2.3.6
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  intl: ^0.17.0
-  logger: ^1.3.0
-  path: ^1.8.2
+  intl: ^0.18.0
+  logger: ^1.4.0
+  path: ^1.8.3
 
 dev_dependencies:
-  build_runner: ^2.3.3
-  flutter_launcher_icons: ^0.11.0
+  build_runner: ^2.4.4
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.1
-  flutter_native_splash: ^2.2.16
+  flutter_native_splash: ^2.2.19
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.0
